# LLM-Model

./: README.md  main.ipynb  main.py  notebook.mk  pyproject.toml
