[project]
name = "llm-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.85.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
